# gin-rummy

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/add-variant/: SKILL.md
.claude/skills/release/: SKILL.md
benches/: deadwood.rs
docs/: DESIGN.md
examples/: deadwood.rs  simulate.rs
src/: deck.rs  game.rs  hand.rs  lib.rs  meld.rs  player.rs  round.rs  rules.rs
tests/: fmt.rs  game.rs  meld.rs  proptest.rs  round.rs  serde.rs
